<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ffv"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/bg">

    <RelativeLayout style="@style/styleActionBar">

        <TextView
            style="@style/styleActiobBar_mid"
            android:text="@string/preconf_create" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/preconf_create_topic"
        style="@style/styleLayout_h"
        android:layout_marginTop="@dimen/height_6_80">

        <TextView
            style="@style/styleLayout_leftItem"
            android:layout_marginLeft="@dimen/width_4_80"
            android:text="@string/preconf_create_topic" />

        <EditText
            android:id="@+id/preconf_create_topic_default"
            style="@style/styleLayout_rightItem"
            android:maxLength="50" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/preconf_create_password"
        style="@style/styleLayout_h"
        android:layout_marginTop="@dimen/height_2_80">

        <TextView
            style="@style/styleLayout_leftItem"
            android:layout_marginLeft="@dimen/width_4_80"
            android:text="@string/preconf_create_password" />

        <EditText
            android:id="@+id/preconf_create_passwrod_default"
            style="@style/styleLayout_rightItem"
            android:hint="@string/preconf_create_password_default"
            android:singleLine="true"
            android:password="true" />

    </LinearLayout>

    <Button
        android:id="@+id/preconf_create_enterButton"
        style="@style/stylePreConf_button" />

    <TextView
        style="@style/styleInput"
        android:layout_marginTop="@dimen/height_1_80"
        android:textSize="14sp"
        android:textColor="@color/actionbar_bg"
        android:text="@string/preconf_create_notif"
        android:visibility="gone" />

</LinearLayout>
