<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ffv"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/app_main_hint">

    <LinearLayout
        style="@style/fwv"
        android:layout_marginTop="@dimen/height_5_80"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_frag_create_number_tv_1"
            style="@style/ww"
            android:text="@string/createhint"
            android:textColor="@color/a6_txt_black2"
            android:textSize="@dimen/textSize_07" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_frag_create_ll_1"
        style="@style/style_ll_input"
        android:layout_marginTop="@dimen/height_3_80">

        <ImageView
            style="@style/style_iv_inputicon_square"
            android:src="@drawable/a6_icon_create_theme" />

        <EditText
            android:id="@+id/view_frag_create_et_1"
            style="@style/style_et_input"
            android:maxLength="50"
            android:hint="@string/confTitle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_frag_create_ll_2"
        style="@style/style_ll_input"
        android:layout_marginTop="@dimen/height_101_80">

        <ImageView
            style="@style/style_iv_inputicon_square"
            android:src="@drawable/a6_icon_create_pwd" />

        <EditText
            android:id="@+id/view_frag_create_et_2"
            style="@style/style_et_input"
            android:hint="@string/preconf_create_password_default"
            android:singleLine="true"
            android:password="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_frag_create_ll_4"
        style="@style/style_ll_input"
        android:layout_marginTop="@dimen/height_101_80">

        <ImageView
            style="@style/style_iv_inputicon_square"
            android:src="@drawable/a6_icon_create_duration" />

        <TextView
            android:id="@+id/view_frag_create_tv_4"
            android:layout_marginLeft="@dimen/width_2_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/a6_input_black"
            android:textColorHint="@color/a6_input_hint"
            android:background="@null"
            android:textSize="@dimen/textSize_04"
            android:hint="@string/preconf_create_duration1"
            android:singleLine="true"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/height_101_80"
            android:layout_height="@dimen/height_101_80"
            android:src="@drawable/a6_icon_join_list_arr2" />

    </LinearLayout>

    <Button
        android:id="@+id/view_frag_create_btn_org"
        style="@style/style_btn_ok"
        android:layout_marginTop="@dimen/height_101_80"
        android:text="@string/preconf_org_title"
        android:visibility="gone"/>

    <Button
        android:id="@+id/view_frag_create_btn"
        android:layout_marginTop="@dimen/height_3_80"
        style="@style/style_btn_ok"
        android:text="@string/confirm" />

    <TextView
        style="@style/style_common_input_and_btn"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/height_2_80"
        android:textSize="@dimen/textSize_01"
        android:textColor="@color/a6_txt_black1"
        android:text="@string/preconf_create_notif"
        android:visibility="gone" />

    <LinearLayout
        style="@style/style_common_input_and_btn"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/height_3_80">

        <TextView
            android:id="@+id/view_frag_create_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/a6_txt_red1"
            android:textSize="@dimen/textSize_04"
            android:text="@string/alert" />

    </LinearLayout>

</LinearLayout>
